--- a/Penoiu_Teodora_Cristina/tema-1/B/participanti.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/participanti.html
@@ -28,6 +28,8 @@
                     <li><a class="dropdown-item" href="sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
                     <li><a class="dropdown-item" href="participanti.html">Participanti</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/login.html">Intra in cont</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/inscriere.html">Inscriete-te!</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,7 +38,7 @@
 
 <main>
     <div class="container">
-        <p class="">Ne pare rau, nu putem pune lista cu participantii online. Fiecare concurent va primi un email care ii va confirma inscrierea la concurs la adresa de email indicata la inscriere. In cazul in care nu ati primit vreun email, va rugam spuneti-ne la<a href="mailto:concurs@gmail.com">concurs@gmail.com.</a></p>
+        <p class=""><strong>!!Ne pare rau, lista cu participanti poate fi vazuta doar de catre elevi inscrisi in concurs. Fiecare concurent va primi un email care ii va confirma inscrierea la concurs la adresa de email indicata la inscriere. In cazul in care nu ati primit vreun email, va rugam spuneti-ne la<a href="mailto:concurs@gmail.com">concurs@gmail.com.!!</a></strong></p>
     </div>
 </main>
 
