--- a/Penoiu_Teodora_Cristina/tema-1/B/sponsori.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/sponsori.html
@@ -29,6 +29,8 @@
                     <li><a class="dropdown-item" href="sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
                     <li><a class="dropdown-item" href="participanti.html">Participanti</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/login.html">Intra in cont</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/inscriere.html">Inscriete-te!</a></li>
                 </ul>
             </div>
         </nav>
