am facut 2.b - adaugarea de anunturi si stergerea de anunturi

--- a/Penoiu_Teodora_Cristina/tema-1/B/noutati.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/noutati.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/regulament.css">
+    <link rel="stylesheet" href="assets/css/noutati.css">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/libs/bootstrap-5.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -28,8 +29,8 @@
                     <li><a class="dropdown-item" href="sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
                     <li><a class="dropdown-item" href="participanti.html">Participanti</a></li>
-                    <li><a class="dropdown-item" href="../../tema-2/login.html">Intra in cont</a></li>
-                    <li><a class="dropdown-item" href="../../tema-2/inscriere.html">Inscriete-te!</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/login.php">Intra in cont</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/inscriere.php">Inscriete-te!</a></li>
                 </ul>
             </div>
         </nav>
@@ -38,7 +39,17 @@
 
 <main>
     <div class="container">
-    <h1 class="align-text-center page-title">Momentan, nu exista vreo informatie concreta legata de editia anul acesta a concursului. Reveniti mai tarziu pentru mai multe informatii!</h1>
+        <h1 class="page-title-noutati">Noutati</h1>
+        <div class="noutate-container">
+            <div>
+                <img class="image-wrapper float-start" src="../../tema-2/assets/img/exclamation-mark.jpg" alt="poza cu un semn al exclamarii">
+            </div>
+            <div class="float-md-end noutate-content">
+                <h2 class="page-third-title mb-3 mt-0">Concurs de Informatica, editia 7 - data de inscriere</h2>
+                <p>Data scadenta de inscriere la acest concurs este 20.06.2021. Pentru a te inscrie, mergi la<a href="../../tema-2/inscriere.php">pagina de inscriere</a>, unde vei completa informatiile necesare.</p>
+            </div>
+            <div class="cleaner"></div>
+        </div>
     </div>
 </main>
 
