--- a/Penoiu_Teodora_Cristina/tema-1/B/participanti.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/participanti.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="assets/libs/bootstrap-5.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="assets/libs/bootstrap-5.0.0/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body>
@@ -28,8 +29,8 @@
                     <li><a class="dropdown-item" href="sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
                     <li><a class="dropdown-item" href="participanti.html">Participanti</a></li>
-                    <li><a class="dropdown-item" href="../../tema-2/login.html">Intra in cont</a></li>
-                    <li><a class="dropdown-item" href="../../tema-2/inscriere.html">Inscriete-te!</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/login.php">Intra in cont</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/inscriere.php">Inscriete-te!</a></li>
                 </ul>
             </div>
         </nav>
