--- a/Penoiu_Teodora_Cristina/tema-1/B/subiecte.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/subiecte.html
@@ -28,7 +28,8 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
-                    <li><a class="dropdown-item" href="participanti.html">Participanti</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/anunt.php">Noutati</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/participanti.php">Participanti</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/login.php">Intra in cont</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/inscriere.php">Inscrie-te!</a></li>
                 </ul>
