--- a/Penoiu_Teodora_Cristina/tema-2/login.html
+++ b/Penoiu_Teodora_Cristina/tema-2/login.html
@@ -26,9 +26,12 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="../tema-1/B/sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="../tema-1/B/organizatori.html">Organizatori</a></li>
-                    <li><a class="dropdown-item" href="../tema-1/B/participanti.html">Participanti</a></li>
-                    <li><a class="dropdown-item" href="login.html">Intra in cont</a></li>
-                    <li><a class="dropdown-item" href="inscriere.html">Inscriete-te!</a></li>
+                    <li><a class="dropdown-item" href="anunt.php">Noutati</a></li>
+                    <li><a class="dropdown-item" href="participanti.php">Participanti</a></li>
+                    <li><a class="dropdown-item" href="../tema-1/B/subiecte.html">Subiecte</a></li>
+                    <li><a class="dropdown-item" href="rezultate.php">Rezultate</a></li>
+                    <li><a class="dropdown-item" href="login.php">Intra in cont</a></li>
+                    <li><a class="dropdown-item" href="inscriere.php">Inscriete-te!</a></li>
                 </ul>
             </div>
         </nav>
