--- a/Penoiu_Teodora_Cristina/tema-1/B/home.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/home.html
@@ -25,7 +25,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
-                    <li><a class="dropdown-item" href="participanti.html">Participanti</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/participanti.php">Participanti</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/login.php">Intra in cont</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/inscriere.php">Inscriete-te!</a></li>
                 </ul>
@@ -46,7 +46,7 @@
                             <p class="card-text">Ultimele noutati in legatura cu concursul nostru (editia 2021).</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="noutati.html" class="btn btn-primary">CLICK ME</a>
+                                    <a href="../../tema-2/anunt.php" class="btn btn-primary">CLICK ME</a>
                                 </div>
                             </div>
                         </div>
