am adaugat tema 2 - d

--- a/Penoiu_Teodora_Cristina/tema-1/B/home.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/home.html
@@ -26,7 +26,7 @@
                     <li><a class="dropdown-item" href="sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/participanti.php">Participanti</a></li>
-                    <li><a class="dropdown-item" href="../../tema-2/login.php">Intra in cont</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/admin/index.php">Intra in cont</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/inscriere.php">Inscriete-te!</a></li>
                 </ul>
             </div>
@@ -74,7 +74,7 @@
                             <p class="card-text">Rezultatele finale la concurs (aveti nevoie de cont pentru a le vedea).</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="rezultate.html" class="btn btn-primary">CLICK ME</a>
+                                    <a href="../../tema-2/rezultate.php" class="btn btn-primary">CLICK ME</a>
                                 </div>
                             </div>
                         </div>
