--- a/Penoiu_Teodora_Cristina/tema-1/B/subiecte.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/subiecte.html
@@ -30,7 +30,8 @@
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/anunt.php">Noutati</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/participanti.php">Participanti</a></li>
-                    <li><a class="dropdown-item" href="../../tema-2/login.php">Intra in cont</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/rezultate.php">Rezultate</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/admin/index.php">Intra in cont</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/inscriere.php">Inscrie-te!</a></li>
                 </ul>
             </div>
