--- a/Penoiu_Teodora_Cristina/tema-1/B/regulament.html
+++ b/Penoiu_Teodora_Cristina/tema-1/B/regulament.html
@@ -27,9 +27,11 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="sponsori.html">Sponsori</a></li>
                     <li><a class="dropdown-item" href="organizatori.html">Organizatori</a></li>
+                    <li><a class="dropdown-item" href="subiecte.html">Subiecte</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/anunt.php">Noutati</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/participanti.php">Participanti</a></li>
-                    <li><a class="dropdown-item" href="../../tema-2/login.php">Intra in cont</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/rezultate.php">Rezultate</a></li>
+                    <li><a class="dropdown-item" href="../../tema-2/admin/index.php">Intra in cont</a></li>
                     <li><a class="dropdown-item" href="../../tema-2/inscriere.php">Inscriete-te!</a></li>
                 </ul>
             </div>
